--- a/package.json
+++ b/package.json
@@ -22,19 +22,23 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "^0.0.19",
     "@tanstack/react-query": "^5.45.0",
     "@uploadthing/react": "^6.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dom-confetti": "^0.2.0",
     "react-dropzone": "^14.2.3",
     "react-rnd": "^10.4.11",
+    "resend": "^3.3.0",
     "sharp": "^0.33.4",
     "stripe": "^15.10.0",
     "tailwind-merge": "^2.3.0",
